--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -261,6 +261,33 @@ exampleAppsTestJsFirefox.dependsOn extractExampleApps
 
 task exampleAppsTestJs, dependsOn: [exampleAppsTestJsChrome, exampleAppsTestJsFirefox], {}
 
+ext.jsDocTmpAppName = "jsdoc-tmp"
+task cleanJsDocTmpApp, {
+	outputs.upToDateWhen { false }
+	doFirst {
+		delete file("workspace/apps/${jsDocTmpAppName}")
+	}
+}
+
+task createJsDocTmpApp, dependsOn: cleanJsDocTmpApp, {
+	doFirst {
+		exec {
+			commandLine org.bladerunnerjs.OSCalculator.getOSSpecificCommand("brjs") + ["create-app", jsDocTmpAppName]
+			workingDir file("workspace/sdk")
+		}
+	}
+}
+
+task createSdkJsDocs, dependsOn: createJsDocTmpApp, {
+	doFirst {
+		exec {
+			commandLine org.bladerunnerjs.OSCalculator.getOSSpecificCommand("brjs") + ["jsdoc", jsDocTmpAppName]
+			workingDir file("workspace/sdk")
+		}
+	}
+}
+
+
 ext.explodedSdkDir = "${project.buildDir}/exploded"
 
 task distZip, type:Zip, dependsOn: [assemble], {
@@ -369,7 +396,7 @@ task cleanWorkspaceFiles {
 }
 
 clean {
-	dependsOn cleanWorkspaceFiles
+	dependsOn = [cleanWorkspaceFiles, cleanJsDocTmpApp]
 }
 
 
