Set the content-type and character-encoding using a filter rather using a 'web.xml' file, as 'web.xml' is only capable of doing this for files, and doesn't work for servlet requests.

--- a/cutlass-sdk/build-resources/includes/sdk/templates/app-template/WEB-INF/web.xml
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/app-template/WEB-INF/web.xml
@@ -71,19 +71,7 @@
 	
 	<!-- mime mappings -->
 	<mime-mapping>
-		<extension>js</extension>
-		<mime-type>application/javascript;charset=UTF-8</mime-type>
-	</mime-mapping>
-	<mime-mapping>
-		<extension>css</extension>
-		<mime-type>text/css;charset=UTF-8</mime-type>
-	</mime-mapping>
-	<mime-mapping>
-		<extension>html</extension>
-		<mime-type>text/html;charset=UTF-8</mime-type>
-	</mime-mapping>
-	<mime-mapping>
-		<extension>xml</extension>
-		<mime-type>text/xml;charset=UTF-8</mime-type>
+		<extension>woff</extension>
+		<mime-type>application/x-font-woff</mime-type>
 	</mime-mapping>
 </web-app>
