Moved the servlet filter that needs to be available in both dev and prod into a separate Java 6, dependency free project.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -35,6 +35,7 @@ configurations {
 dependencies {
 	retrolambdaConfig dependency('retrolambda')
 	
+	compile project(":brjs-servlet")
 	compile project(":brjs-logger")
 	compile dependency('commons-io')
 	compile dependency('commons-lang3')
