--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,10 @@ subprojects { p ->
 				sourceCompatibility = '1.8'
 				targetCompatibility = '1.8'
 			}
+			else if(project.name == 'brjs-servlet') {
+				sourceCompatibility = '1.6'
+				targetCompatibility = '1.6'
+			}
 			else {
 				sourceCompatibility = '1.7'
 				targetCompatibility = '1.7'
