--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include "bladerunner-common-servlets",
 		"cutlass-sdk",
 		"system-app-servlets",
 		"brjs-core",
+		"brjs-servlet",
         "brjs-logger",
         "brjs-logger-binding",
         "brjs-runner",
