Updated the build to only copy the 'brjs-servlet' project in to the each apps 'WEB-INF/lib' directory -- this has trimmed down 'sdk/libs/java/application' from 45MB to 0.5MB. This does mean that developers wishing to develop on a third-party web server will need to make the BRJS jars available directly to the web server.

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -27,8 +27,7 @@ dependencies {
 	system dependency('selenium-java')
 	system dependency('jetty-jsp')
 
-	application project(path: ':bladerunner-common-servlets')
-	application project(path: ':bladerunner-prod-servlets')
+	application project(path: ':brjs-servlet')
 	application dependency('javassist')
 
 	javadocs project(path: ':brjs-core', configuration:'javadocs')
