--- a/cutlass-sdk/.gitignore
+++ b/cutlass-sdk/.gitignore
@@ -17,3 +17,9 @@ workspace/test-results
 workspace/sdk/*
 !workspace/sdk/libs/javascript
 !workspace/sdk/system-applications
+
+# TODO: delete these lines when no longer needed -- these lines are needed to work around 2 separate bugs in the Java git implementation (EGit) provided with Eclipse Kepler
+#   1. Egit doesn't currently support recursive wildcards (**) as used in the main brjs .gitignore
+#   2. Egit currently won't consider recursive matches defined before a blanket block pattern, followed by negated block patterns (!), so is ignoring matches in the main brjs .gitignore
+brjs-*.jar
+*.bundle
