Made JSP jar available in tests so that the JSP tests can be enabled.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -75,6 +75,7 @@ dependencies {
 	testCompile dependency('hamcrest-all')
 	
 	testRuntime project(path: ':brjs-logger-binding')
+	testRuntime dependency('jetty-jsp')
 }
 
 javadoc {
