--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -71,6 +71,7 @@ dependencies {
 	
 	testCompile dependency('junit')
 	testCompile dependency('mockito-core')
+	testCompile dependency('fluent-hc')
 	testCompile dependency('httpclient')
 	testCompile dependency('hamcrest-all')
 	
