only cleaning app files if the app dir exists

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -434,10 +434,12 @@ task cleanWorkspaceFiles {
     			include(name: '**/WEB-INF/lib/brjs-*.jar')
     		}
     	}
-    	ant.delete(includeemptydirs: 'true') {
-    		fileset(dir: 'workspace/apps') {
-    			include(name: '**/WEB-INF/lib/brjs-*.jar')
-    		}
+    	if (file('workspace/apps').exists()) {
+        	ant.delete(includeemptydirs: 'true') {
+        		fileset(dir: 'workspace/apps') {
+        			include(name: '**/WEB-INF/lib/brjs-*.jar')
+        		}
+        	}
     	}
 	}
 }
