--- a/brjs-servlet/build.gradle
+++ b/brjs-servlet/build.gradle
@@ -1,6 +1,11 @@
 apply plugin: 'java'
 apply plugin: com.caplin.gradle.plugins.CompileOnly
 
+// NOTE: This project should remain at 1.6 compatability as it's used in production. It should also have 0 dependencies to remain as lightweight as possible.
+
+sourceCompatibility = '1.6'
+targetCompatibility = '1.6'
+
 dependencies {
 	compileOnly dependency('servlet-api')
 }
