updating banned paths in sdk:check task

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -394,7 +394,9 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 	   "**/js-test-driver/bundles/**/*",
 	   "**/libs/**/tests/**/*",
 	   "**/system-applications/**/tests/**/*",
-	   "*/sdk/libs/javascript/caplin/test/**",
+	   "*/sdk/libs/javascript/**/tests/**",
+	   "*/sdk/libs/javascript/thirdparty/**",
+	   "*/sdk/libs/javascript/br-libs/**",
 	   "*/sdk/run*",
 	   "**/node_modules/**",
 	   "*/apps/*/*",
