--- a/cutlass-sdk/.gitignore
+++ b/cutlass-sdk/.gitignore
@@ -14,12 +14,12 @@ workspace/licenses
 workspace/generated
 workspace/test-results
 
-cutlass-sdk/workspace/sdk/brjs
-cutlass-sdk/workspace/sdk/brjs.cmd
-cutlass-sdk/workspace/sdk/docs
-cutlass-sdk/workspace/sdk/libs/java
-cutlass-sdk/workspace/sdk/templates
-cutlass-sdk/workspace/sdk/version.txt
+workspace/sdk/brjs
+workspace/sdk/brjs.cmd
+workspace/sdk/docs
+workspace/sdk/libs/java
+workspace/sdk/templates
+workspace/sdk/version.txt
 
 
 # TODO: delete these lines when no longer needed -- these lines are needed to work around 2 separate bugs in the Java git implementation (EGit) provided with Eclipse Kepler
