--- a/cutlass-sdk/build-resources/includes/sdk/templates/brjs-template/conf/test-runner.conf
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/brjs-template/conf/test-runner.conf
@@ -3,19 +3,21 @@ portNumber: 4224
 defaultBrowser: chrome
 
 # browser paths which contain spaces may need to be wrapped in quote marks for certain operating systems
+# \ characters may need to be escaped (e.g. \\) or use / instead
 # browser paths can be either relative to this conf file or be an absolute path
 # use $$ after the end of the browser path and before any arguments you wish to add (e.g. $$--ARG to specify an argument)
 # browser paths defined below are example locations, please update as necessary
+# Note: browsers already running may not be able to obtain a profile lock. To fix this either use a different browser or use the relevant arguments to define a different profile.
 
 browserPaths:
   windows:
-#    chrome: C:\Program Files\Google\Chrome\Application\chrome.exe
-#    firefox: C:\Program Files\Mozilla Firefox\firefox.exe
-#    ie: C:\Program Files\Internet Explorer\iexplore.exe
+    chrome: "C:/Program Files (x86)/Google/Chrome/Application/chrome.exe"
+    firefox: "C:/Program Files/Mozilla Firefox/firefox.exe"
+    ie: "C:/Program Files/Internet Explorer/iexplore.exe"
   mac:
-#    chrome: "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
-#    firefox: /Applications/Firefox.app/Contents/MacOS/firefox
-#    safari: /Applications/Safari.app/Contents/MacOS/Safari
+    chrome: "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
+    firefox: /Applications/Firefox.app/Contents/MacOS/firefox
+    safari: /Applications/Safari.app/Contents/MacOS/Safari
   linux:
-#    chrome: /opt/google/chrome/chrome
-#    firefox: /usr/bin/firefox
+    chrome: /opt/google/chrome/chrome
+    firefox: /usr/bin/firefox
