adding script dir to cutlass-sdk gitignore

--- a/cutlass-sdk/.gitignore
+++ b/cutlass-sdk/.gitignore
@@ -20,7 +20,7 @@ workspace/sdk/docs
 workspace/sdk/libs/java
 workspace/sdk/templates
 workspace/sdk/version.txt
-
+workspace/sdk/scripts
 
 # TODO: delete these lines when no longer needed -- these lines are needed to work around 2 separate bugs in the Java git implementation (EGit) provided with Eclipse Kepler
 #   1. Egit doesn't currently support recursive wildcards (**) as used in the main brjs .gitignore
