--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -212,8 +212,14 @@ def createTestTask = { taskName, taskTestDir, taskTestType, browser ->
 def brLibsPathRelativeToSdk = "libs/javascript"
 def brlibsPath = "workspace/sdk/${brLibsPathRelativeToSdk}"
 
+createTestTask "testLocaleForwaderIE", "libs/locale-forwarder", "ALL", "ie"
+createTestTask "testLocaleForwaderChrome", "libs/locale-forwarder", "ALL", "chrome"
+createTestTask "testLocaleForwaderFirefox", "libs/locale-forwarder", "ALL", "firefox"
+
 createTestTask "testJsChrome", brLibsPathRelativeToSdk, "ALL", "chrome"
+	testJsChrome.dependsOn testLocaleForwaderChrome
 createTestTask "testJsFirefox", brLibsPathRelativeToSdk, "ALL", "firefox"
+	testJsFirefox.dependsOn testLocaleForwaderFirefox
 
 /* run each test on it's own in IE due to unreliability in CI */
 task testJsIE, {}
@@ -225,19 +231,15 @@ file(brlibsPath).listFiles().each { libDir ->
 		testJsIE.dependsOn taskName
 	}
 }
+	testJsIE.dependsOn testLocaleForwaderIE
 
 createTestTask "testSystemAppsIE", "system-applications", "ALL", "ie"
 createTestTask "testSystemAppsChrome", "system-applications", "ALL", "chrome"
 createTestTask "testSystemAppsFirefox", "system-applications", "ALL", "firefox"
 
-createTestTask "testLocaleForwaderIE", "libs/locale-forwarder", "ALL", "ie"
-createTestTask "testLocaleForwaderChrome", "libs/locale-forwarder", "ALL", "chrome"
-createTestTask "testLocaleForwaderFirefox", "libs/locale-forwarder", "ALL", "firefox"
-
-
-task testIE, dependsOn: [testJsIE, testSystemAppsIE, testLocaleForwaderIE]
-task testChrome, dependsOn:[testJsChrome, testSystemAppsChrome, testLocaleForwaderChrome]
-task testFirefox, dependsOn: [testJsFirefox, testSystemAppsFirefox, testLocaleForwaderFirefox]
+task testIE, dependsOn: [testJsIE, testSystemAppsIE]
+task testChrome, dependsOn:[testJsChrome, testSystemAppsChrome]
+task testFirefox, dependsOn: [testJsFirefox, testSystemAppsFirefox]
 task test, dependsOn: testChrome
 
 
