removing the seperate JS IE tests now the CI build seems to be more stable

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -220,17 +220,7 @@ createTestTask "testJsChrome", brLibsPathRelativeToSdk, "ALL", "chrome"
 	testJsChrome.dependsOn testLocaleForwaderChrome
 createTestTask "testJsFirefox", brLibsPathRelativeToSdk, "ALL", "firefox"
 	testJsFirefox.dependsOn testLocaleForwaderFirefox
-
-/* run each test on it's own in IE due to unreliability in CI */
-task testJsIE, {}
-file(brlibsPath).listFiles().each { libDir ->
-	if (libDir.isDirectory() && fileTree(dir:"${libDir.absolutePath}/tests").getFiles().size() > 0) {
-		def libDirName = libDir.name
-		def taskName = "testJs${ libDirName.capitalize() }AllIE"
-		createTestTask taskName, "${brLibsPathRelativeToSdk}/${libDirName}", "ALL", "ie"
-		testJsIE.dependsOn taskName
-	}
-}
+createTestTask "testJsIE", brLibsPathRelativeToSdk, "ALL", "ie"
 	testJsIE.dependsOn testLocaleForwaderIE
 
 createTestTask "testSystemAppsIE", "system-applications", "ALL", "ie"
