fixing build task and template test after previous changes

--- a/brjs-sdk/build.gradle
+++ b/brjs-sdk/build.gradle
@@ -411,9 +411,11 @@ task cleanWorkspaceFiles {
 			fileset(dir: 'workspace/sdk/system-applications') {
     			include(name: '**/WEB-INF/lib/brjs-*.jar')
     		}
+		}
+		if (file('workspace/apps').exists()) {
 			fileset(dir: 'workspace/apps') {
-    			include(name: '**/WEB-INF/lib/brjs-*.jar')
-    		}
+				include(name: '**/WEB-INF/lib/brjs-*.jar')
+			}
 		}
 	}
 }
