--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -77,6 +77,10 @@ dependencies {
 	testRuntime dependency('jetty-jsp')
 }
 
+jar {
+	from sourceSets.main.allJava // include all src in the jar
+}
+
 javadoc {
 	title = "BladeRunnerJS ${buildVersion}"
 	/* info for JavaDoc options http://docs.oracle.com/javase/6/docs/technotes/tools/windows/javadoc.html#overviewcomment */
@@ -90,12 +94,6 @@ task javadocZip, type:Zip, dependsOn:javadoc, {
 	into "javadoc"
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = 'sources'
-	from sourceSets.main.allSource
-}
-
 artifacts {
 	javadocs javadocZip
-	srcJar sourcesJar
 }
