--- a/build.gradle
+++ b/build.gradle
@@ -198,7 +198,7 @@ task generateReleaseNotes, {
 		def includeIssueLabels = ["bug", "feature", "enhancement", "experience", "breaking-change"]
 		def issueIncludeLabelsString = includeIssueLabels.join(", ").replaceAll(/^(.*),(.*)$/,'$1 or$2'); /* regex replaces the last ',' with 'or' */
 
-		def excludeIssueLabels = ["invalid", "duplicate", "wont-fix"]
+		def excludeIssueLabels = ["invalid", "duplicate", "wont-fix", "ignore-release-note"]
 
 		List<Issue> issues = new ArrayList<Issue>();
 		milestoneIds.each { milestoneId ->
