making the release note task run after distZip

--- a/build.gradle
+++ b/build.gradle
@@ -264,7 +264,7 @@ task generateReleaseNotes, {
     	}
 	}
 }
-
+generateReleaseNotes.shouldRunAfter ':brjs-sdk:distZip'
 
 task githubRelease, dependsOn:[generateReleaseNotes, ':brjs-sdk:distZip', build], {
 	doLast {
